--- a/app/package.json
+++ b/app/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@material-ui/core": "latest",
     "@material-ui/icons": "^4.5.1",
+    "axios": "^0.19.0",
     "clsx": "latest",
     "formik": "^2.0.6",
     "formik-material-ui": "^1.0.0",
+    "isomorphic-unfetch": "^3.0.0",
+    "lodash": "^4.17.15",
     "mui-datatables": "^2.13.2",
     "react": "latest",
     "react-dom": "latest",
-    "react-scripts": "latest"
+    "react-scripts": "latest",
+    "swr": "^0.1.13"
   },
   "browserslist": {
     "production": [
