--- a/app/package.json
+++ b/app/package.json
@@ -9,10 +9,13 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "latest",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.8",
     "axios": "^0.19.0",
     "clsx": "latest",
+    "date-fns": "^2.8.1",
     "formik": "^2.0.6",
     "formik-material-ui": "^1.0.0",
     "isomorphic-unfetch": "^3.0.0",
