--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,7 @@
     "@material-ui/pickers": "^3.2.8",
     "axios": "^0.19.0",
     "clsx": "latest",
-    "date-fns": "^2.8.1",
+    "date-fns": "^2.0.0-beta.5",
     "formik": "^2.0.6",
     "formik-material-ui": "^1.0.0",
     "isomorphic-unfetch": "^3.0.0",
