--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "npx cypress open",
+    "test": "npx cypress run --browser chrome",
     "eject": "react-scripts eject"
   },
   "dependencies": {
